<resources>
    <string name="app_name">PriceSearch</string>
    <string name="app_email">royalstyles@naver.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">로그인을 해주세요</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">앱 정보</string>
    <string name="action_login">로그인</string>

    <string name="menu_news">News</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_navermap">네이버지도</string>
    <string name="menu_naversearch">NaverSearch</string>
    <string name="menu_cloudstorage">CloudStorage</string>
    <string name="menu_lotto">로또</string>
    <string name="menu_realtimedb">RealTimeDB</string>
    <string name="menu_realtimedb01">RealTimeDB01</string>
    <string name="menu_realtimedb02">RealTimeDB02</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="fcm_message">fcm_message</string>
    <string name="Login">로그인</string>
    <string name="SignUp">회원가입</string>
    <string name="Email">email</string>
    <string name="Password">password</string>
    <string name="Password_check">password check</string>

    <string name="submenu_01">submenu_01</string>
    <string name="send">Send</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="age">나이</string>
    <string name="recall">가져오기</string>

    <string name="add_button">번호 추가하기</string>
    <string name="init_button">초기화</string>
    <string name="start_button">자동 생성 시작</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>