<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_movie" />
        <item
            android:id="@+id/nav_naversearch"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_naversearch" />
        <item
            android:id="@+id/nav_cloudstorage"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cloudstorage" />
    </group>

    <item android:title="@string/menu_realtimedb">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_realtimedb01"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_realtimedb01" />
            <item
                android:id="@+id/nav_realtimedb02"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_realtimedb02" />
        </menu>
    </item>
</menu>