<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lotto">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.jhpj.pricesearch.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.jhpj.pricesearch.ui.movie.MovieFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/nav_naversearch"
        android:name="com.jhpj.pricesearch.ui.naversearch.NaverSearchFragment"
        android:label="@string/menu_naversearch"
        tools:layout="@layout/fragment_naversearch" />

    <fragment
        android:id="@+id/nav_cloudstorage"
        android:name="com.jhpj.pricesearch.ui.cloudstorage.CloudStorageFragment"
        android:label="@string/menu_cloudstorage"
        tools:layout="@layout/fragment_cloudstorage" />

    <fragment
        android:id="@+id/nav_realtimedb01"
        android:name="com.jhpj.pricesearch.ui.realtimeDB.RealTimeDB01Fragment"
        android:label="@string/menu_realtimedb01"
        tools:layout="@layout/fragment_realtimedb1" />

    <fragment
        android:id="@+id/nav_realtimedb02"
        android:name="com.jhpj.pricesearch.ui.realtimeDB.RealTimeDB02Fragment"
        android:label="@string/menu_realtimedb02"
        tools:layout="@layout/fragment_realtimedb2" />
    <fragment
        android:id="@+id/nav_lotto"
        android:name="com.jhpj.pricesearch.ui.lotto.LottoFragment"
        android:label="@string/menu_lotto"
        tools:layout="@layout/fragment_lotto" />
</navigation>