<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ui.realtimeDB.RealTimeDB02Fragment">

    <LinearLayout
        android:id="@+id/linear_datainput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/name"
            android:privateImeOptions="defaultInputmode=korean" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:privateImeOptions="defaultInputmode=english" />

        <EditText
            android:id="@+id/edt_age"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/age"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/send" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_datasearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_datainput">

        <EditText
            android:id="@+id/edt_id"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="가져올 데이터의 id"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recall" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/linear_datasearch" />


</androidx.constraintlayout.widget.ConstraintLayout>